[feat] update swagger support

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "i": "^0.3.7",
     "js-yaml": "^4.1.1",
