--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/swagger-ui-react": "^5.18.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "eslint-plugin-import": "^2.32.0",
     "swagger-jsdoc": "^6.2.8",
     "tailwindcss": "^4",
     "typescript": "^5"
